Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI429NET.VB

        Public Declare Function BTI429_MsgSkipRd Lib "BTI429.DLL" Alias "_BTI429_MsgSkipRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_MsgSkipWr Lib "BTI429.DLL" Alias "_BTI429_MsgSkipWr@12" (ByVal skip As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_MsgSyncDefine Lib "BTI429.DLL" Alias "_BTI429_MsgSyncDefine@20" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgTriggerDefine Lib "BTI429.DLL" Alias "_BTI429_MsgTriggerDefine@24" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ParamAmplitudeConfig Lib "BTI429.DLL" Alias "_BTI429_ParamAmplitudeConfig@16" (ByVal configval As UInt32, ByVal dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ParamAmplitudeGet Lib "BTI429.DLL" Alias "_BTI429_ParamAmplitudeGet@12" (ByRef dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ParamBitCountBuild Lib "BTI429.DLL" Alias "_BTI429_ParamBitCountBuild@4" (ByVal bitcount As Int32) As UInt16
        Public Declare Function BTI429_ParamBitRateConfig Lib "BTI429.DLL" Alias "_BTI429_ParamBitRateConfig@16" (ByVal configval As UInt32, ByVal divval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ParamBitRateGet Lib "BTI429.DLL" Alias "_BTI429_ParamBitRateGet@12" (ByRef divval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBranch Lib "BTI429.DLL" Alias "_BTI429_SchedBranch@16" (ByVal condition As UInt32, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBranchUpdate Lib "BTI429.DLL" Alias "_BTI429_SchedBranchUpdate@16" (ByVal destindex As Int32, ByVal opcodeindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuild Lib "BTI429.DLL" Alias "_BTI429_SchedBuild@24" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedCall Lib "BTI429.DLL" Alias "_BTI429_SchedCall@16" (ByVal condition As UInt32, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedCallUpdate Lib "BTI429.DLL" Alias "_BTI429_SchedCallUpdate@16" (ByVal destindex As Int32, ByVal opcodeindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedEntry Lib "BTI429.DLL" Alias "_BTI429_SchedEntry@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedGap Lib "BTI429.DLL" Alias "_BTI429_SchedGap@12" (ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedGapFixed Lib "BTI429.DLL" Alias "_BTI429_SchedGapFixed@12" (ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedGapList Lib "BTI429.DLL" Alias "_BTI429_SchedGapList@16" (ByVal gapval As UInt16, ByVal listaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedHalt Lib "BTI429.DLL" Alias "_BTI429_SchedHalt@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedLog Lib "BTI429.DLL" Alias "_BTI429_SchedLog@16" (ByVal condition As UInt32, ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedMode Lib "BTI429.DLL" Alias "_BTI429_SchedMode@4" (ByVal modeval As UInt32) As Int32
        Public Declare Function BTI429_SchedMsg Lib "BTI429.DLL" Alias "_BTI429_SchedMsg@12" (ByVal msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedMsgEx Lib "BTI429.DLL" Alias "_BTI429_SchedMsgEx@16" (ByVal msgaddr As UInt32, ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedPause Lib "BTI429.DLL" Alias "_BTI429_SchedPause@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedPulse Lib "BTI429.DLL" Alias "_BTI429_SchedPulse@12" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedRestart Lib "BTI429.DLL" Alias "_BTI429_SchedRestart@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedReturn Lib "BTI429.DLL" Alias "_BTI429_SchedReturn@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChConfigEx Lib "BTI429.DLL" Alias "_BTI429_ChConfigEx@16" (ByVal configval As UInt32, ByVal count As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChOutputStateSet Lib "BTI429.DLL" Alias "_BTI429_ChOutputStateSet@16" (ByVal pos As UInt32, ByVal neg As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdAddr Lib "BTI429.DLL" Alias "_BTI429_CmdAddr@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_CmdAlloc Lib "BTI429.DLL" Alias "_BTI429_CmdAlloc@8" (ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_CmdAllocEx Lib "BTI429.DLL" Alias "_BTI429_CmdAllocEx@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_CmdBaseRd Lib "BTI429.DLL" Alias "_BTI429_CmdBaseRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTI429_CmdBaseWr Lib "BTI429.DLL" Alias "_BTI429_CmdBaseWr@12" (ByVal addrval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdClear Lib "BTI429.DLL" Alias "_BTI429_CmdClear@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdCountRd Lib "BTI429.DLL" Alias "_BTI429_CmdCountRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_CmdCountWr Lib "BTI429.DLL" Alias "_BTI429_CmdCountWr@12" (ByVal countval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdCtrlRd Lib "BTI429.DLL" Alias "_BTI429_CmdCtrlRd@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_CmdCtrlWr Lib "BTI429.DLL" Alias "_BTI429_CmdCtrlWr@16" (ByVal ctrlval As UInt16, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdCurrRd Lib "BTI429.DLL" Alias "_BTI429_CmdCurrRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_CmdCurrWr Lib "BTI429.DLL" Alias "_BTI429_CmdCurrWr@12" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_CmdInit Lib "BTI429.DLL" Alias "_BTI429_CmdInit@8" (ByVal opcode As UInt16, ByRef block As UInt16)
        Public Declare Function BTI429_CmdInsert Lib "BTI429.DLL" Alias "_BTI429_CmdInsert@12" (ByRef block As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdMaxLoopRd Lib "BTI429.DLL" Alias "_BTI429_CmdMaxLoopRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_CmdMaxLoopWr Lib "BTI429.DLL" Alias "_BTI429_CmdMaxLoopWr@12" (ByVal countval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdRd Lib "BTI429.DLL" Alias "_BTI429_CmdRd@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_CmdRestart Lib "BTI429.DLL" Alias "_BTI429_CmdRestart@8" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdShotRd Lib "BTI429.DLL" Alias "_BTI429_CmdShotRd@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdShotWr Lib "BTI429.DLL" Alias "_BTI429_CmdShotWr@16" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdSkipRd Lib "BTI429.DLL" Alias "_BTI429_CmdSkipRd@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdSkipWr Lib "BTI429.DLL" Alias "_BTI429_CmdSkipWr@16" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_CmdStackClr Lib "BTI429.DLL" Alias "_BTI429_CmdStackClr@8" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdStartRd Lib "BTI429.DLL" Alias "_BTI429_CmdStartRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_CmdStartWr Lib "BTI429.DLL" Alias "_BTI429_CmdStartWr@12" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdStepRd Lib "BTI429.DLL" Alias "_BTI429_CmdStepRd@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdStepWr Lib "BTI429.DLL" Alias "_BTI429_CmdStepWr@16" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdTotalRd Lib "BTI429.DLL" Alias "_BTI429_CmdTotalRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_CmdTotalWr Lib "BTI429.DLL" Alias "_BTI429_CmdTotalWr@12" (ByVal countval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdWr Lib "BTI429.DLL" Alias "_BTI429_CmdWr@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ConvFromArinc Lib "BTI429.DLL" Alias "_BTI429_ConvFromArinc@4" (ByVal msgval As UInt32) As UInt32
        Public Declare Function BTI429_ConvToArinc Lib "BTI429.DLL" Alias "_BTI429_ConvToArinc@4" (ByVal msgval As UInt32) As UInt32
        Public Declare Function BTI429_DllUsageCount Lib "BTI429.DLL" Alias "_BTI429_DllUsageCount@0" () As Int32
        Public Declare Function BTI429_FilterAddr Lib "BTI429.DLL" Alias "_BTI429_FilterAddr@16" (ByVal labelval As Int32, ByVal sdival As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_FilterCreate Lib "BTI429.DLL" Alias "_BTI429_FilterCreate@4" (ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_FilterFill Lib "BTI429.DLL" Alias "_BTI429_FilterFill@12" (ByVal msgaddr As UInt32, ByVal basevaladdr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_FldGetParBit Lib "BTI429.DLL" Alias "_BTI429_FldGetParBit@4" (ByVal msgval As UInt32) As UInt16
        Public Declare Function BTI429_FldPutParBit Lib "BTI429.DLL" Alias "_BTI429_FldPutParBit@4" (ByVal msgval As UInt32) As UInt32
